<resources>
    <string name="app_name">简易理工</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登陆界面</string>

    <!-- Strings related to login -->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="prompt_student_id">学号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_identify_code">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_reset">重设</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">学号错误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请把信息填写完整</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emai completions."</string>
</resources>
